# qpageview

./: CHANGELOG.md  ChangeLog  INSTALL.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: Makefile
docs/source/: advanced.rst  backgroundjob.rst  cache.rst  changelog.rst  conf.py  constants.rst  cupsprinter.rst  diff.rst  document.rst  export.rst  highlight.rst  image.rst  imageview.rst  index.rst  installing.rst  interacting.rst  layout.rst  license.rst  link.rst  locking.rst  magnifier.rst  modoverview.rst  multipage.rst  page.rst  pdf.rst  pkginfo.rst  poppler.rst  printing.rst  qpageview.rst  rectangles.rst  render.rst  rendering.rst  rubberband.rst  scrollarea.rst  selector.rst  shadow.rst  sidebarview.rst  stubs.rst  svg.rst  usage.rst  (+4 more)
docs/source/_static/: custom.css
docs/web/: conf.py
qpageview/: __init__.py  backgroundjob.py  cache.py  constants.py  cupsprinter.py  diff.py  document.py  export.py  highlight.py  image.py  imageview.py  layout.py  link.py  locking.py  magnifier.py  multipage.py  page.py  pdf.py  pkginfo.py  poppler.py  printing.py  rectangles.py  render.py  rubberband.py  scrollarea.py  selector.py  shadow.py  shadow.py.orig  shadow.py~  sidebarview.py  svg.py  util.py  view.py  viewactions.py  widgetoverlay.py
