[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qpageview"
dynamic = ["version"]
dependencies = ["PyQt5"]
optional-dependencies = {pdf = ["python-poppler-qt5"], cups = ["pycups"]}
requires-python = ">= 3.6"
description = "Widget to display page-based documents for Qt5/PyQt5"
readme = "README.rst"
maintainers = [{name = "Wilbert Berendsen", email = "info@frescobaldi.org"}]
license.text = "GPL v3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.6",
]

[project.urls]
Homepage = "https://github.com/frescobaldi/qpageview"
Documentation = "https://qpageview.org"
"Issue tracker" = "https://github.com/frescobaldi/qpageview/issues"

[tool.hatch.version]
path = "qpageview/pkginfo.py"
pattern = "version_string = \"(?P<version>.*)\""
